MDEV-5861 MySQL Bug#12601974 - STORED PROCEDURE SQL_MODE=NO_BACKSLASH_ESCAPES IGNORED AND BREAKS REPLICATION

escape usernames in CREATE/DROP USER error messages according to NO_BACKSLASH_ESCAPES